--- a/src/App.css
+++ b/src/App.css
@@ -508,11 +508,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .contact form button {
   font-weight: 700;
   color: #000;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   padding: 14px 48px;
   font-size: 18px;
   margin-top: 25px;
-  border-radius: 0;
+  /* border-radius: 20px; */
   position: relative;
   transition: 0.3s ease-in-out;
 }
@@ -522,6 +522,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .contact form button:hover {
   color: #fff;
+  
+  
 }
 .contact form button::before {
   content: "";
@@ -533,9 +535,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   left: 0;
   z-index: 0;
   transition: 0.3s ease-in-out;
+ 
 }
 .contact form button:hover::before {
   width: 100%;
+  
 }
 
 /************ Footer Css ************/
