--- a/src/components/Skills2.css
+++ b/src/components/Skills2.css
@@ -1,9 +1,9 @@
-.skill{
-    background-image: url('../assets/img/banner-bg2.jpg');
+.skill {
+  background-image: url("../assets/img/banner-bg2.jpg");
 }
 
-.skill-bx{
-    background-color: #708090;
+.skill-bx {
+  background-color: #2C0E5F;
 }
 
 .item {
@@ -11,7 +11,7 @@
   justify-content: center;
   margin: 20px;
   padding: 20px;
-  border: 2px solid green;
+  border: 2px solid #3F9B0B;
   border-radius: 10px;
   box-shadow: 0 0 10px #000;
   width: 200px;
@@ -22,6 +22,6 @@
   max-height: 50%;
 }
 
-.item h5{
-    margin-top: 10px;
+.item h5 {
+  margin-top: 10px;
 }
