--- a/src/components/Skills2.css
+++ b/src/components/Skills2.css
@@ -1,28 +1,37 @@
 .skill {
-  background-image: url("../assets/img/banner-bg2.jpg");
+  background-image: url("../assets/img/skills-bg2.jpg");
 }
 
 .skill-bx {
-  background-color: #2C0E5F;
+  background-color:  #10698A;
   margin-top: 50px;
 }
 
 .item {
   align-items: center;
   justify-content: center;
-  margin: 20px;
-  padding: 20px;
-  border: 2px solid #3F9B0B;
+  margin: 15px;
+  padding: 15px;
+  background-image: linear-gradient(to bottom,  #298ffc , #00b8d4); 
+  border: none; 
   border-radius: 10px;
-  box-shadow: 0 0 10px #000;
+  box-shadow:  0 2px 4px rgba(0, 0, 0, 0.1);
   width: 200px;
   height: 120px;
-}
+ } 
+
+ 
+
 .item img {
+  align-items: center;
+  justify-content: center;
   max-width: 30%;
   max-height: 50%;
+  margin-left:35% ;
+  
 }
 
 .item h5 {
   margin-top: 10px;
+  margin-right: auto;
 }
