--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -63,7 +63,7 @@
   }
   
   .contact form button:hover {
-    background-color: #28a745; /* Green background on hover */
+    background-color: #0ac9f0; /* Green background on hover */
     color: #fff; /* White text on hover */
   }
   
