--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
-    background-color: #222;
     color: #fff;
     padding: 40px 0;
+    background-color: #003161;
   }
   
   .logo-container {
@@ -24,8 +24,21 @@
     height: 30px;
   }
   
-  .copyright-text {
-    margin-top: 20px;
-    font-size: 14px;
+  .footer-logo{
+    display: flex;
+    justify-content: center; /* Horizontally center */
+    align-items: center; /* Vertically center */
+    max-width: 150px;
+    
+  }
+  .footer-h4{
+    color: white !important;
+    font-size: 20px;
+    padding-right: 15px;
   }
   
+
+
+  /* ---batil css--- */
+
+
