--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -82,8 +82,8 @@
   }
   .proj-imgbx::before {
     content: "";
-    background: linear-gradient(90.21deg, #4cae4f -5.91%, #4aaf4d 111.58%);
-    opacity: 0.90;
+    background: linear-gradient(90.21deg, #068cda -5.91%, #069eda 111.58%);
+    opacity: 0.95;
     position: absolute;
     width: 100%;
     height: 0;
