--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -12,11 +12,11 @@
     text-align: center;
   }
   .project p {
-    color: #b8b8b8;
+    color: #ffffff;
     font-size: 18px;
     letter-spacing: 0.8px;
     line-height: 1.5em;
-    margin: 14px auto 30px auto;
+    margin: 14px auto 50px auto;
     text-align: center;
     width: 56%;
   }
@@ -50,7 +50,6 @@
     width: 0;
     height: 100%;
     background: linear-gradient(135deg, #1d976c -5.91%, #3f51b5 111.58%);
-  
     top: 0;
     left: 0;
     z-index: -1;
