--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -5,6 +5,7 @@
     position: relative;
     background-color: black;
     background-image: url("../assets/img/projects-bg2.jpg");
+    margin-top: -100px;
   }
   .project h2 {
     font-size: 45px;
